tests/suite/fail/regression/reg_move_21.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let s = "r21"
    take(s)
    print(s) //~ ERROR was moved
}
